# game-of-life-cpp

./: CMakeLists.txt  README.md  default.nix
src/: grid.cpp  grid.h  main.cpp  render.cpp  render.h
